--- a/universal/ubi9/Dockerfile
+++ b/universal/ubi9/Dockerfile
@@ -290,14 +290,13 @@ RUN set -euf -o pipefail \
     && KN_VERSION="1.11.1" \
     && KN_ARCH="linux-amd64" \
     && KN_BIN="kn-${KN_ARCH}" \
-    && KN_BIN_URL="https://github.com/knative/client/releases/download/v${KN_VERSION}/${KN_BIN}" \
-    && KN_CHEKSUMS_URL="https://github.com/knative/client/releases/download/v${KN_VERSION}/checksums.txt" \
+    && KN_BIN_URL="https://github.com/knative/client/releases/download/knative-v${KN_VERSION}/${KN_BIN}" \
+    && KN_CHEKSUMS_URL="https://github.com/knative/client/releases/download/knative-v${KN_VERSION}/checksums.txt" \
     && curl -sSLO "${KN_BIN_URL}" \
     && curl -sSLO "${KN_CHEKSUMS_URL}" \
     && sha256sum --ignore-missing -c "checksums.txt" 2>&1 | grep OK \
-    && mv "${KN_BIN}" kn \
-    && chmod +x kn \
-    && mv kn /usr/local/bin \
+    && mv "${KN_BIN}" /usr/local/bin/kn \
+    && chmod +x /usr/local/bin/kn \
     && cd - \
     && rm -rf "${TEMP_DIR}"
 
